// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render component 1`] = `
<div
  class="roleAssignmentContainer"
>
  <div>
    Role Name 5
  </div>
  <div>
    Sulu
  </div>
  <div>
    <div
      class="select"
    >
      <button
        class="displayValue default"
        type="button"
      >
        <div
          aria-label="de"
          class="croppedText"
          title="de"
        >
          <div
            aria-hidden="true"
            class="front"
          >
            d
          </div>
          <div
            aria-hidden="true"
            class="back"
          >
            <span>
              e
            </span>
          </div>
          <div
            class="whole"
          >
            de
          </div>
        </div>
        <span
          aria-label="su-angle-down"
          class="su-angle-down toggle"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Render component in disabled state 1`] = `
<div
  class="roleAssignmentContainer disabled"
>
  <div>
    Role Name 5
  </div>
  <div>
    Sulu
  </div>
  <div>
    <div
      class="select"
    >
      <button
        class="displayValue default"
        disabled=""
        type="button"
      >
        <div
          aria-label="de"
          class="croppedText"
          title="de"
        >
          <div
            aria-hidden="true"
            class="front"
          >
            d
          </div>
          <div
            aria-hidden="true"
            class="back"
          >
            <span>
              e
            </span>
          </div>
          <div
            class="whole"
          >
            de
          </div>
        </div>
        <span
          aria-label="su-angle-down"
          class="su-angle-down toggle"
        />
      </button>
    </div>
  </div>
</div>
`;
